added endpoint for saving graph
